# sport_latest-

Sports-AI/: .replit  pyproject.toml
Sports-AI/Ai-commentary-Generator/: README.md  align_video.py  app.py  models.py  pyproject.toml  train_classifier.py
Sports-AI/Ai-commentary-Generator/static/css/: styles.css
Sports-AI/Ai-commentary-Generator/static/js/: app.js  simple-player.js  speech-synthesizer.js  video-player.js
Sports-AI/Ai-commentary-Generator/templates/: index.html  layout.html  process.html  results.html
Sports-AI/Ai-commentary-Generator/utils/: align_media.py  commentary_generator.py  event_detection.py  object_detection.py  pose_estimation.py  shot_classification.py  text_to_speech.py  video_processor.py  youtube_processor.py
Sports-AI/attached_assets/: Pasted--Chats-Archived-Cricket-Batting-Shots-Technique-Training-43-minutes-ago-https-youtube-com-sh-1745540974499.txt  Pasted--Running-on-http-192-168-0-135-5000-INFO-werkzeug-Press-CTRL-C-to-quit-INFO-werkzeug-Restar-1745552345586.txt
