[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.0",
    "gtts>=2.5.4",
    "moviepy>=2.1.2",
    "numpy>=2.2.5",
    "opencv-python>=4.11.0.86",
    "scikit-learn>=1.6.1",
    "yt-dlp>=2025.3.31",
]
