[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gtts>=2.5.4",
    "gunicorn>=23.0.0",
    "numpy>=2.2.4",
    "openai>=1.75.0",
    "opencv-python>=4.11.0.86",
    "psycopg2-binary>=2.9.10",
    "scikit-learn>=1.6.1",
    "werkzeug>=3.1.3",
    "youtube-dl>=2021.12.17",
    "yt-dlp>=2025.3.31",
]
